# Nonograms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: arguments.h  logger.h  paint.h  puzzle.h
puzzles/: emoji_mono.pzl
src/: arguments.cpp  main.cpp  paint.cpp  puzzle.cpp
src/model/: Grid.cpp  Grid.h  Pixel.cpp  Pixel.h
